# kitabi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  app.json  install.sh  pyproject.toml  update.sh  wizard.html
kitabi/: __init__.py  ai.py  bot.py  data.py  dev.py  main.py
mockups/: alinti-karti.html  yeralt-notlar.html
templates/: journal.css  journal.html
tools/: regenerate_mockup.py
