[project]
name = "kitabi"
version = "1.0.6"
description = "Personal reading-tracker Telegram bot with voice notes and AI assistance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kitabi contributors" }]
keywords = ["telegram", "bot", "reading", "books", "ai", "gemini"]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Telegram
    "python-telegram-bot[ext]>=21.6",
    # AI (Google Gemini)
    "google-genai>=0.6",
    # Persistence + ORM
    "sqlalchemy>=2.0",
    # Config (env-driven, type-safe)
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # PDF rendering
    "weasyprint>=63",
    "jinja2>=3.1",
    # Structured logging
    "structlog>=24.4",
    # HTTP client (used for Google Books lookup; ptb uses it internally too)
    "httpx>=0.27",
    # GCS sync — SQLite snapshot upload/download
    "google-cloud-storage>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/poeple-app/kitabi"
Repository = "https://github.com/poeple-app/kitabi"
Issues = "https://github.com/poeple-app/kitabi/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kitabi*"]

[tool.setuptools.package-data]
kitabi = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
